<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="all_languages">All Languages</string>
    <string name="amazon_attribution_text">As an Amazon Associate we earn from qualifying purchases</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="banner_unlock_ai_assistant_caption">Tap here to unlock your Al writing feature</string>
    <string name="billing_key_param">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvt71P7QiBe40GJAfKLJuG9wOH+V7K0sSGlDaxq1xSh0Sprm/ByQcIp8sE76zfvmWGFTDwFhPgWUsYyEZ8pBOjEl9TimW8zBb6RStDYhSrERBho03rejiQVo5P2xF37EkSPbBVXYfOUN9j10x5y6RFgA2mbJk+yA/MG8hETpVxvXciLFbyrxskRRqGSI2+YP5p+oaBigNs0NvjZZCAQgaNNQ6dlXWd4cVoLOJM7DN8KiWzhErFMxXl/HfrCuEKihGP71gjANi6fqvsN7VLup1ct28Um98/1pszuVWhUwU9HBK2joH8zBbVhEkC6to1ZG3LjfJNNo8y5IJ6WSSuDpuxwIDAQAB</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="content_description_close_ai_assistant">Close AI Assistant</string>
    <string name="content_description_close_banner">Close</string>
    <string name="content_description_close_popup">Close Popup</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_generating_response">Error while generating response</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_input_too_long">Please limit your message to 900 characters.</string>
    <string name="error_invalid_api_key">Invalid API key</string>
    <string name="error_missing_api_key">Missing API key</string>
    <string name="error_quota_exceeded">Quota exceeded. Buy more OpenAI credits.</string>
    <string name="error_quota_exceeded_appnomix">Response limit reached. Try again later.</string>
    <string name="error_server_overloaded">OpenAI server overloaded</string>
    <string name="error_server_processing">Server processing error</string>
    <string name="export_file">Export file..</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="extend">Extend</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="first_appnomix_banner_text">Get the new AI assistant sponsored by Appnomix</string>
    <string name="frequently_used">Frequently Used</string>
    <string name="generating_response">Generating response</string>
    <string name="hello_wrio">Hello Typewise</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_screen_label">Typewise Offline</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="ime_name">Typewise Offline</string>
    <string name="inclusive_language">Inclusive language</string>
    <string name="item_view_role_description">Tab</string>
    <string name="keyboard_cards_autocorrecthint_description">Wrong Autocorrection? Then tap to undo. Typewise learns from you.</string>
    <string name="keyboard_cards_autocorrecthint_title">Autocorrection</string>
    <string name="keyboard_cards_autocorrection_tip">Tip</string>
    <string name="keyboard_cards_autocorrectioninitialization_description">Dictionary is being prepared for autocorrection. This can take up to a few minutes.</string>
    <string name="keyboard_cards_autocorrectioninitialization_title">Importing languages</string>
    <string name="keyboard_cards_layout_description">Switch layouts, choose languages and more.</string>
    <string name="keyboard_cards_layout_text_ab1">We recommend using the traditional layout for the first few days in order to get used to our gestures. Try switching the layout now, you can switch back anytime.</string>
    <string name="keyboard_cards_layout_title">Tap to adjust</string>
    <string name="keyboard_cards_layout_title_ab1">Tap to switch layout</string>
    <string name="keyboard_cards_newlanguage_button">Add</string>
    <string name="keyboard_cards_newlanguage_buttonSecondary">Skip</string>
    <string name="keyboard_cards_newlanguage_description">Typewise automatically switches between your selected languages, making typing in multiple languages super smooth!</string>
    <string name="keyboard_cards_newlanguage_title">Typing in {{recognizedLanguage}}?</string>
    <string name="keyboard_cards_optimize_button">Let\'s go!</string>
    <string name="keyboard_cards_optimize_description">Open Typewise app to optimize your dictionary.</string>
    <string name="keyboard_cards_optimize_title">Optimization required</string>
    <string name="keyboard_cards_rate_button">Rate Typewise</string>
    <string name="keyboard_cards_rate_description">If you\'re enjoying Typewise, tell us. Your feedback helps to bring Typewise to the next level.</string>
    <string name="keyboard_cards_rate_title">A small request…</string>
    <string name="keyboard_cards_tutorial_button">Start tutorial</string>
    <string name="keyboard_cards_tutorial_description">Become a typing superhuman by completing the tutorial.</string>
    <string name="keyboard_cards_tutorial_title">Lift off with the tutorial</string>
    <string name="keyboard_cards_upgrade_button">Discover more</string>
    <string name="keyboard_cards_upgrade_description">Personalized Text Predictions are a PRO feature. Curious to see what else Typewise has to offer?</string>
    <string name="keyboard_cards_upgrade_title">Ooh! Seems like a PRO feature</string>
    <string name="keyboard_cards_validate_button">Let\'s go!</string>
    <string name="keyboard_cards_validate_description">Open Typewise app to validate your subscription.</string>
    <string name="keyboard_cards_validate_title">Continue using PRO</string>
    <string name="keyboard_cards_welcome_button">Let\'s go!</string>
    <string name="keyboard_cards_welcome_description">You\'ve successfully upgraded to Typewise, your next-generation keyboard.</string>
    <string name="keyboard_cards_welcome_title">Congrats</string>
    <string name="keyboard_dropdown_languagepicker_language_add">Add more</string>
    <string name="keyboard_dropdown_languagepicker_language_title">Choose language</string>
    <string name="keyboard_dropdown_languages_addmore">Add more</string>
    <string name="keyboard_dropdown_languages_title">Choose your language</string>
    <string name="keyboard_dropdown_topmenu_hexagonlayout">Hexagon Layout</string>
    <string name="keyboard_dropdown_topmenu_highlights">Highlights</string>
    <string name="keyboard_dropdown_topmenu_settings">Settings</string>
    <string name="keyboard_dropdown_topmenu_traditionallayout">Traditional Layout</string>
    <string name="keyboard_dropdown_topmenu_tutorial">Tutorial</string>
    <string name="keyboard_emoji_activities">Activities</string>
    <string name="keyboard_emoji_animals_nature">Animals &amp; Nature</string>
    <string name="keyboard_emoji_food_drink">Food &amp; Drink</string>
    <string name="keyboard_emoji_mostused">Most used</string>
    <string name="keyboard_emoji_objects_symbols">Objects &amp; Symbols</string>
    <string name="keyboard_emoji_smileys_people">Smileys &amp; People</string>
    <string name="keyboard_emoji_travel_places">Travel &amp; Places</string>
    <string name="keyboard_numbers_specialcharacters_currencies">Currencies</string>
    <string name="keyboard_numbers_specialcharacters_math">Math Symbols</string>
    <string name="keyboard_numbers_specialcharacters_numbers">Numbers</string>
    <string name="keyboard_numbers_specialcharacters_punctuations_symbols">Punctuations &amp; Symbols</string>
    <string name="keyboard_numbers_specialcharacters_recentlyused">Quick Access</string>
    <string name="keyboard_numbers_specialcharacters_subscript_superscript">Subscript &amp; Superscript</string>
    <string name="keyboard_push_channel_description">Dictionary update &amp; Language import</string>
    <string name="keyboard_push_channel_name">Dictionary update &amp; Language import</string>
    <string name="keyboard_push_integrity">Checking dictionary integrity</string>
    <string name="keyboard_push_word_case_restoration">Restoring words</string>
    <string name="smart_bar_dropdown_close_button_content_description">Close smart bar dropdown</string>
</resources>