<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:paddingBottom="10dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/smart_bar_height_offset" style="@style/cardLayout">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/intersection_1_upper" android:importantForAccessibility="no" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/exit" android:padding="@dimen/exit_image_padding" android:layout_width="@dimen/dialog_image_width" android:layout_height="@dimen/dialog_image_height" android:layout_marginTop="@dimen/exit_image_margin_top" android:src="@drawable/ic_close_card" android:contentDescription="@string/content_description_close_popup" android:layout_marginEnd="@dimen/exit_image_margin_bottom" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:id="@+id/tvCardTitle" android:text="@string/keyboard_cards_validate_title" app:layout_constraintBottom_toTopOf="@+id/tvCardExplanation" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/cardTitle"/>
    <TextView android:id="@+id/tvCardExplanation" android:layout_marginBottom="@dimen/dialog_explanation_margin_bottom" android:text="@string/keyboard_cards_validate_description" app:layout_constraintBottom_toTopOf="@+id/footer_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/cardText"/>
    <Button android:id="@+id/footer_button" android:text="@string/keyboard_cards_validate_button" android:layout_alignParentBottom="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/dialogButton"/>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/intersection_1_lower" android:importantForAccessibility="no" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
