<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/background" android:background="@color/overlay_background" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="@dimen/dialog_image_width" android:layout_height="@dimen/dialog_image_height" android:layout_marginTop="@dimen/exit_image_margin_top" android:layout_marginBottom="@dimen/onboarding_menu_pointer_padding_bottom" android:src="@drawable/ic_arrow" android:importantForAccessibility="no" android:layout_marginStart="@dimen/onboarding_menu_pointer_padding_start" android:layout_marginEnd="@dimen/exit_image_margin_bottom" app:layout_constraintBottom_toTopOf="@+id/cl_card" app:layout_constraintStart_toStartOf="0"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cl_card" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/on_boarding_menu_explanation_offset" app:layout_constraintTop_toTopOf="0" style="@style/cardNoBackgroundLayout">
        <ImageView android:id="@+id/closeMenuExplanationButton" android:padding="@dimen/exit_image_padding" android:layout_width="@dimen/dialog_image_width" android:layout_height="@dimen/dialog_image_height" android:src="@drawable/ic_close_card" android:contentDescription="@string/content_description_close_popup" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:id="@+id/onboarding_track_progress_title" android:layout_marginTop="@dimen/dialog_title_margin_top" android:text="@string/keyboard_cards_layout_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/cardTitle"/>
        <TextView android:layout_marginBottom="@dimen/dialog_explanation_margin_bottom" android:text="@string/keyboard_cards_layout_description" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_track_progress_title" style="@style/cardText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
