<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/smart_bar_height_offset" style="@style/cardLayout">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/moon_margin_bottom" android:src="@drawable/ic_moon" android:importantForAccessibility="no" android:layout_marginStart="@dimen/moon_margin_start" app:layout_constraintBottom_toTopOf="@+id/tvCardTitle" app:layout_constraintStart_toStartOf="0"/>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/asteroid1_margin_bottom" android:src="@drawable/ic_asteroid" android:importantForAccessibility="no" android:layout_marginEnd="@dimen/asteroid1_margin_end" app:layout_constraintBottom_toTopOf="@+id/tvCardTitle" app:layout_constraintEnd_toEndOf="0"/>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/planet_margin_end" android:src="@drawable/ic_planet" android:layout_alignParentBottom="true" android:importantForAccessibility="no" android:layout_marginStart="@dimen/planet_margin_start" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0"/>
    <TextView android:id="@+id/tvCardTitle" android:text="@string/keyboard_cards_welcome_title" app:layout_constraintBottom_toTopOf="@+id/tvCardExplanation" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/cardTitle"/>
    <TextView android:id="@+id/tvCardExplanation" android:layout_marginBottom="@dimen/dialog_explanation_margin_bottom" android:text="@string/keyboard_cards_welcome_description" app:layout_constraintBottom_toTopOf="@+id/footer_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintEnd_toStartOf="0" style="@style/cardText"/>
    <Button android:id="@+id/footer_button" android:text="@string/keyboard_cards_welcome_button" android:layout_alignParentBottom="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/dialogButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
