<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/smart_bar_height_offset">
    <ScrollView android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="0">
        <LinearLayout android:orientation="vertical" android:id="@+id/dropdownLayout" android:paddingBottom="@dimen/dropdown_layout_padding_bottom" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.flexbox.FlexboxLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dropdown_layout_buttons_margin_top" android:layout_marginStart="@dimen/dropdown_layout_buttons_margin_start" android:layout_marginEnd="@dimen/dropdown_layout_buttons_margin_end" app:flexDirection="0" app:flexWrap="1">
                <LinearLayout android:gravity="center" android:id="@+id/layoutSwitch" android:background="@drawable/dropdown_item_background" android:paddingTop="@dimen/dropdown_layout_button_layout_padding_vertical" android:paddingBottom="@dimen/dropdown_layout_button_layout_padding_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dropdown_layout_button_margin_top" android:paddingStart="5dp" android:paddingEnd="@dimen/dropdown_layout_button_layout_padding_end" android:layout_marginEnd="@dimen/dropdown_layout_button_margin_end" android:paddingVertical="@dimen/dropdown_layout_button_layout_padding_vertical">
                    <ImageView android:id="@+id/layoutSwitchButton" android:padding="@dimen/dropdown_layout_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/traditional_button" android:contentDescription="@string/keyboard_dropdown_topmenu_traditionallayout"/>
                    <TextView android:textSize="@dimen/dropdown_settings_text_size" android:textColor="@color/new_smartbar_text_color" android:id="@+id/layoutSwitchText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyboard_dropdown_topmenu_traditionallayout" android:lines="1"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:id="@+id/tutorial" android:background="@drawable/dropdown_item_background" android:paddingTop="@dimen/dropdown_layout_button_layout_padding_vertical" android:paddingBottom="@dimen/dropdown_layout_button_layout_padding_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dropdown_layout_button_margin_top" android:paddingStart="@dimen/dropdown_layout_button_layout_padding_start" android:paddingEnd="@dimen/dropdown_layout_button_layout_padding_end" android:layout_marginEnd="@dimen/dropdown_layout_button_margin_end" android:paddingVertical="@dimen/dropdown_layout_button_layout_padding_vertical">
                    <ImageView android:id="@+id/tutorialButton" android:padding="@dimen/dropdown_layout_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tutorial" android:contentDescription="@string/keyboard_dropdown_topmenu_tutorial"/>
                    <TextView android:textSize="@dimen/dropdown_settings_text_size" android:textColor="@color/new_smartbar_text_color" android:id="@+id/tutorialText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyboard_dropdown_topmenu_tutorial" android:lines="1"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:id="@+id/settings" android:background="@drawable/dropdown_item_background" android:paddingTop="@dimen/dropdown_layout_button_layout_padding_vertical" android:paddingBottom="@dimen/dropdown_layout_button_layout_padding_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dropdown_layout_button_margin_top" android:paddingStart="@dimen/dropdown_layout_button_layout_padding_start" android:paddingEnd="@dimen/dropdown_layout_button_layout_padding_end" android:paddingVertical="@dimen/dropdown_layout_button_layout_padding_vertical">
                    <ImageView android:id="@+id/settingsButton" android:padding="@dimen/dropdown_layout_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/settings_button" android:contentDescription="@string/keyboard_dropdown_topmenu_settings"/>
                    <TextView android:textSize="@dimen/dropdown_settings_text_size" android:textColor="@color/new_smartbar_text_color" android:id="@+id/settingsText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyboard_dropdown_topmenu_settings" android:lines="1"/>
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>
            <TextView android:textSize="@dimen/dropdown_title_text_size" android:textColor="@color/new_smartbar_text_color" android:id="@+id/chooseLanguageLabel" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dropdown_choose_language_text_size" android:text="@string/keyboard_dropdown_languagepicker_language_title" android:layout_marginStart="@dimen/dropdown_choose_language_text_size"/>
            <androidx.recyclerview.widget.RecyclerView android:gravity="center_vertical" android:id="@+id/languagesRecyclerView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dropdown_recycler_view_margin_top" android:overScrollMode="never" android:layout_marginStart="@dimen/dropdown_recycler_view_margin_horizontal" android:layout_marginEnd="@dimen/dropdown_recycler_view_margin_horizontal"/>
            <ImageView android:layout_gravity="end" android:id="@+id/closeButton" android:padding="@dimen/dropdown_close_button_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/dropdown_close_button_size" android:layout_height="@dimen/dropdown_close_button_size" android:layout_marginTop="-17dp" android:src="@drawable/expand_less_10" android:contentDescription="@string/smart_bar_dropdown_close_button_content_description" android:layout_marginStart="@dimen/dropdown_close_button_margin_start" android:layout_marginEnd="@dimen/dropdown_close_button_margin_end"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
